--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,13 @@ body {
   font-family: "Rubik", sans-serif;
 }
 
-.markercluster-map {
-  height: 90vh;
+
+.leaflet-container {
+  height: 600px;
+  width: 100%;
+}
+
+.leaflet-div-icon {
+  background: transparent;
+  border: none;
 }
